[workspace]
members = [
    "web3-analysis-core",
    "web3-theoretical-foundations", 
    "web3-core-technologies",
    "web3-architecture-design",
    "web3-application-ecosystem",
    "web3-advanced-technologies",
    "web3-development-operations",
    "web3-project-management",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Web3 Analysis Team"]
license = "MIT OR Apache-2.0"
description = "Web3技术分析文档库 - 完整的Web3技术栈实现"
homepage = "https://github.com/web3-analysis/web3-tech-stack"
repository = "https://github.com/web3-analysis/web3-tech-stack"
readme = "README.md"
keywords = ["web3", "blockchain", "defi", "smart-contracts", "rust"]
categories = ["web-programming", "cryptography", "development-tools"]

[workspace.dependencies]
# 核心依赖
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
anyhow = "1.0"
thiserror = "1.0"

# 异步和并发
futures = "0.3"
async-trait = "0.1"
parking_lot = "0.12"

# 密码学
sha2 = "0.10"
blake3 = "1.5"
ed25519-dalek = "2.0"
k256 = "0.13"
aes-gcm = "0.10"
rand = "0.8"

# 网络和HTTP
reqwest = { version = "0.11", features = ["json"] }
hyper = { version = "0.14", features = ["full"] }
tonic = "0.10"

# 数据库和存储
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
redis = { version = "0.24", features = ["tokio-comp"] }

# Web3和区块链
ethers = "2.0"
web3 = "0.19"
alloy-core = "0.4"

# 开发工具
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.0", features = ["derive"] }

# 测试
mockall = "0.12"
criterion = "0.5"
proptest = "1.0"

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
split-debuginfo = "off"
debug-assertions = false
overflow-checks = false
lto = "thin"
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.test]
opt-level = 1
debug = true
split-debuginfo = "unpacked"
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256
rpath = false

[profile.bench]
opt-level = 3
debug = false
split-debuginfo = "off"
debug-assertions = false
overflow-checks = false
lto = "thin"
panic = "abort"
incremental = false
codegen-units = 1
rpath = false 