[package]
name = "web3-analysis-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Web3技术分析核心库 - 提供通用的分析工具和基础设施"
homepage.workspace = true
repository.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
# 工作空间依赖
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
anyhow.workspace = true
thiserror.workspace = true
futures.workspace = true
async-trait.workspace = true
parking_lot.workspace = true
tracing.workspace = true

# 数学和统计
nalgebra = "0.32"
statrs = "0.16"
approx = "0.5"

[dev-dependencies]
tokio-test = "0.4"
mockall.workspace = true
criterion.workspace = true
proptest.workspace = true

[[bench]]
name = "analysis_benchmarks"
harness = false

[lib]
name = "web3_analysis_core"
path = "src/lib.rs"

[features]
default = ["analysis", "metrics", "validation"]
analysis = []
metrics = []
validation = []
full = ["analysis", "metrics", "validation"] 